FIX: only hide in page menu on smaller screens

--- a/themes/brand/sass/components/_panel.scss
+++ b/themes/brand/sass/components/_panel.scss
@@ -62,7 +62,7 @@
 
 	&--nav {
 		// fall back to the main header navigation
-		@include respond(all-mobile) {
+		@include respond(portrait-tablets) {
 			display: none;
 		}
 
